--- a/Views/AddService.xaml
+++ b/Views/AddService.xaml
@@ -6,7 +6,8 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  mc:Ignorable="d"
                  WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen"
-        Title="Қызмет қосу" Height="450" Width="800">
+        Title="Қызмет қосу" Height="172.684" Width="600">
+    <StackPanel>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*"/>
@@ -33,9 +34,10 @@
         <TextBox Text="{Binding AdditionalService.Percent}" Grid.Row="2" Grid.Column="1"/>
         <Label Content="Қорытынды сомасы" Grid.Row="3" Grid.Column="0"/>
         <TextBox Text="" Grid.Row="3" Grid.Column="1"/>
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,0,50,0">
-            <Button Content="OK" Command="{Binding SaveCommand}"/>
-            <Button Content="Болдырмау" Click="ButtonBase_OnClick"/>
-        </StackPanel>
     </Grid>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="OK" Command="{Binding SaveCommand}" Width="140" Margin="5"/>
+            <Button Content="Болдырмау" Click="ButtonBase_OnClick" Width="140" Margin="5"/>
+        </StackPanel>
+    </StackPanel>
 </mah:MetroWindow>
