--- a/Views/Anketa.xaml
+++ b/Views/Anketa.xaml
@@ -4,10 +4,9 @@
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 WindowState="Maximized"
                  mc:Ignorable="d"
-        WindowStyle="ToolWindow"
-        Title="Anketa" Height="800" Width="1600">
+        WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        Title="Anketa" Height="600" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
