--- a/Views/ClientSearch.xaml
+++ b/Views/ClientSearch.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Клиентті таңдау" Width="400" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" Height="365">
+        Title="Клиентті таңдау" Width="400" WindowStyle="ToolWindow" WindowStartupLocation="CenterOwner" Height="360">
     <Grid>
         <StackPanel>
             <Label Content="ИИН" Margin="5"/>
@@ -17,8 +17,8 @@
             <Label Content="Әкесінің аты" Margin="5"/>
             <TextBox Text="{Binding PatronymicName}" Margin="5"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Ok" Margin="5" Height="30" Width="70" Command="{Binding OkCommand}"/>
-                <Button Click="ButtonBase_OnClick" Content="Болдырмау" Margin="5" Height="30" Width="70"/>
+                <Button Content="Ok" Margin="5" Width="100" Command="{Binding OkCommand}"/>
+                <Button Click="ButtonBase_OnClick" Content="Болдырмау" Margin="5" Width="100"/>
             </StackPanel>
         </StackPanel>
     </Grid>
