--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -1,12 +1,12 @@
-﻿<Controls:MetroWindow x:Class="SAKD.Views.LoginPage"
+﻿<controls:MetroWindow x:Class="SAKD.Views.LoginPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:SAKD.ViewModels"
         mc:Ignorable="d"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="LoginPage" Height="300" Width="500" WindowStyle="None">
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="LoginPage" Height="300" Width="500" WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <viewModels:LoginViewModel/>
     </Window.DataContext>
@@ -37,10 +37,10 @@
                 <Label Content="Логин" Grid.Column="0" Width="100" Grid.Row="0" Margin="10"/>
                 <TextBox Grid.Column="1" Text="{Binding Username}" Grid.Row="0" Width="200" Margin="10"/>
                 <Label Content="Пароль" Grid.Column="0" Width="100" Grid.Row="1" Margin="10"/>
-                <TextBox Grid.Column="1" Text="{Binding Password}" Grid.Row="1" Width="200" Margin="10"/>
+                <PasswordBox Grid.Column="1" x:Name="PasswordBox"  Grid.Row="1" Width="200" Margin="10"/>
                 <Button Content="Кіру" Command="{Binding LoginCommand}" Grid.Column="1" Grid.Row="2" Margin="10"/>
                 <Label Grid.Column="1" Grid.Row="3" Content="{Binding Error}"/>
             </Grid>
         </Border>
     </Grid>
-</Controls:MetroWindow>
+</controls:MetroWindow>
