--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SAKD"
-             StartupUri="Views/WorkSpace.xaml">
+             StartupUri="Views/CreditsPage.xaml">
     <Application.Resources>
 <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
