--- a/Views/AddEmployment.xaml
+++ b/Views/AddEmployment.xaml
@@ -5,7 +5,7 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  mc:Ignorable="d"
-        WindowStyle="ToolWindow" WindowStartupLocation="CenterOwner"
+        WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen"
         Title="Жұмыс орынын қосу" Height="252.667" Width="600">
     <StackPanel>
         <Grid>
