--- a/Views/Anketa.xaml
+++ b/Views/Anketa.xaml
@@ -5,7 +5,7 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  mc:Ignorable="d"
-        WindowStyle="ToolWindow" WindowStartupLocation="CenterOwner" WindowState="Normal"
+        WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" WindowState="Normal"
         Title="Anketa" Height="600" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -412,20 +412,20 @@
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
-                                <Label Content="" Grid.Column="0" Grid.Row="0"/>
-                                <TextBlock Text="{Binding MainJobString}" Grid.Column="1" Grid.Row="0"/>
+                                <Label Content="Басты жұмыс орыны" Grid.Column="0" Grid.Row="0"/>
+                                <TextBox Text="{Binding MainJobString}" Grid.Column="1" Grid.Row="0" IsEnabled="False"/>
                                 <Button Content="Өзгерту" Grid.Column="2" Grid.Row="0" Command="{Binding AddMainJobCommand}"/>
-                                <Label Content="" Grid.Column="0" Grid.Row="1"/>
-                                <TextBlock Text="{Binding AdditionalJobString}" Grid.Column="1" Grid.Row="1"/>
+                                <Label Content="Қосымша жұмыс орыны" Grid.Column="0" Grid.Row="1"/>
+                                <TextBox Text="{Binding AdditionalJobString}" Grid.Column="1" Grid.Row="1" IsEnabled="False"/>
                                 <Button Content="Өзгерту" Grid.Column="2" Grid.Row="1" Command="{Binding AddAdditionalJobCommand}"/>
-                                <Label Content="" Grid.Column="0" Grid.Row="2"/>
-                                <TextBlock Text="{Binding Order.Client.Job.MainSalary}" Grid.Column="1" Grid.Row="2"/>
-                                <Label Content="" Grid.Column="0" Grid.Row="3"/>
-                                <TextBlock Text="{Binding Order.Client.Job.AdditionalSalary}" Grid.Column="1" Grid.Row="3"/>
-                                <Label Content="" Grid.Column="0" Grid.Row="4"/>
-                                <TextBlock Text="{Binding Order.Client.Job.WorkExperience}" Grid.Column="1" Grid.Row="4"/>
-                                <Label Content="" Grid.Column="0" Grid.Row="5"/>
-                                <TextBlock Text="{Binding Order.Client.Job.SalaryBank}" Grid.Column="1" Grid.Row="5"/>
+                                <Label Content="Басты жұмыстағы жалақысы" Grid.Column="0" Grid.Row="2"/>
+                                <TextBox Text="{Binding Order.Client.Job.MainSalary}" Grid.Column="1" Grid.Row="2"/>
+                                <Label Content="Қосымша жұмыстан жалақысы" Grid.Column="0" Grid.Row="3"/>
+                                <TextBox Text="{Binding Order.Client.Job.AdditionalSalary}" Grid.Column="1" Grid.Row="3"/>
+                                <Label Content="Еңбек өтілі(Айлармен)" Grid.Column="0" Grid.Row="4"/>
+                                <TextBox Text="{Binding Order.Client.Job.WorkExperience}" Grid.Column="1" Grid.Row="4"/>
+                                <Label Content="Жалақы алатын банк" Grid.Column="0" Grid.Row="5"/>
+                                <TextBox Text="{Binding Order.Client.Job.SalaryBank}" Grid.Column="1" Grid.Row="5"/>
                             </Grid>
                         </GroupBox>
                         <GroupBox Header="Қосымша ақпарат" IsEnabled="{Binding Status1}">
